--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "php-ai/php-ml": "^0.10.0",
         "symfony/process": "^7.4"
     },
     "require-dev": {
